tests/compile_failure/src/Core/Integer.char.fail.cpp
#include <Phi/Core/Integer.hpp>

int main()
{
    phi::Integer<char> i{255};
}
